# blackhole

./: .gitignore  README.md  pyproject.toml  run.sh
src/: blackhole.py
